# CasinoSimulations-Blackjack

./: BJ_basicStrategy.json  README.md  analysis.R  analysis.py  cards.py  dealer.py  hand.py  main.py  player.py  pyproject.toml  settings.py  simulator.py  strategy.json  strategy.py
.github/workflows/: tests.yml
blackjack/: __main__.py  cards.py  dealer.py  gui.py  hand.py  main.py  player.py  settings.py  simulator.py  strategy.py
tests/: test_bankroll.py  test_payout.py  test_results_tables.py  test_seed.py  test_soft_hand.py  test_split_aces.py  test_surrender.py
