[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blackjack-simulator"
version = "0.1.0"
description = "Blackjack simulator with GUI"
requires-python = ">=3.10"
dependencies = [
  "matplotlib",
  "pandas",
]

[project.gui-scripts]
blackjack-sim = "blackjack.__main__:run_gui"
[project.scripts]
blackjack-cli = "blackjack.__main__:run_cli"
